# lab2

./: CMakeLists.txt
lab2/: CMakeLists.txt  funcs.cpp  funcs.h  lab2.cpp  lab2.h  train.cpp  train.h  wagon.cpp  wagon.h
